# Networking_CPP

./: .gitignore  BinaryOutput.h  CMakeLists.txt  components.h  main.cpp  network.h  packets.cpp  packets.h  setup.sh  syncer.proto  syncer_server.cpp  syncer_server.h
client/: decoder.cpp  decoder.h  main.cpp  network.cpp  network.h  player.cpp  syncer.cpp  syncer.h
server/: main.cpp  network.cpp  network.h  syncer.cpp  syncer.h
shared/: components.h  packets.h  util.h
shared/entt/: components.h
